src/FraJer/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from FraJer/Par.y
-----------------------------------------------------------------------------

state 19 contains 1 reduce/reduce conflicts.
state 44 contains 1 reduce/reduce conflicts.
state 52 contains 1 reduce/reduce conflicts.
state 54 contains 8 reduce/reduce conflicts.
state 122 contains 5 reduce/reduce conflicts.
state 198 contains 5 reduce/reduce conflicts.
state 199 contains 5 reduce/reduce conflicts.
state 200 contains 5 reduce/reduce conflicts.
state 201 contains 5 shift/reduce conflicts.
state 202 contains 5 shift/reduce conflicts.
state 216 contains 8 reduce/reduce conflicts.
state 217 contains 8 reduce/reduce conflicts.
state 218 contains 8 reduce/reduce conflicts.
state 220 contains 8 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pType -> Type                               (0)
	%start_pFType -> FType                             (1)
	%start_pVarIdent -> VarIdent                       (2)
	%start_pArrIdent -> ArrIdent                       (3)
	%start_pDictIdent -> DictIdent                     (4)
	%start_pFuncIdent -> FuncIdent                     (5)
	%start_pExpr -> Expr                               (6)
	%start_pIExpr -> IExpr                             (7)
	%start_pIExpr1 -> IExpr1                           (8)
	%start_pIExpr2 -> IExpr2                           (9)
	%start_pBExpr1 -> BExpr1                           (10)
	%start_pBExpr -> BExpr                             (11)
	%start_pArgs -> Args                               (12)
	%start_pLambda -> Lambda                           (13)
	%start_pParams -> Params                           (14)
	%start_pInstr1 -> Instr1                           (15)
	%start_pInstr -> Instr                             (16)
	Ident -> L_Ident                                   (17)
	Integer -> L_integ                                 (18)
	Type -> 'Int'                                      (19)
	Type -> 'Bool'                                     (20)
	FType -> 'IntFunc'                                 (21)
	FType -> 'BoolFunc'                                (22)
	VarIdent -> Ident                                  (23)
	ArrIdent -> Ident                                  (24)
	DictIdent -> Ident                                 (25)
	FuncIdent -> Ident                                 (26)
	Expr -> IExpr                                      (27)
	Expr -> BExpr                                      (28)
	IExpr -> IExpr '+' IExpr1                          (29)
	IExpr -> IExpr '-' IExpr1                          (30)
	IExpr -> IExpr1                                    (31)
	IExpr1 -> IExpr1 '/' IExpr2                        (32)
	IExpr1 -> IExpr1 '*' IExpr2                        (33)
	IExpr1 -> IExpr1 '%' IExpr2                        (34)
	IExpr1 -> IExpr2                                   (35)
	IExpr2 -> Integer                                  (36)
	IExpr2 -> VarIdent                                 (37)
	IExpr2 -> VarIdent '++'                            (38)
	IExpr2 -> '++' VarIdent                            (39)
	IExpr2 -> VarIdent '--'                            (40)
	IExpr2 -> '--' VarIdent                            (41)
	IExpr2 -> ArrIdent '[' IExpr ']'                   (42)
	IExpr2 -> DictIdent '[' IExpr ']'                  (43)
	IExpr2 -> DictIdent '[' BExpr ']'                  (44)
	IExpr2 -> FuncIdent '(' Args ')'                   (45)
	IExpr2 -> '(' IExpr ')'                            (46)
	BExpr1 -> 'true'                                   (47)
	BExpr1 -> 'false'                                  (48)
	BExpr1 -> VarIdent                                 (49)
	BExpr1 -> IExpr '==' IExpr                         (50)
	BExpr1 -> IExpr '<=' IExpr                         (51)
	BExpr1 -> IExpr '>=' IExpr                         (52)
	BExpr1 -> IExpr '<' IExpr                          (53)
	BExpr1 -> IExpr '>' IExpr                          (54)
	BExpr1 -> IExpr '!=' IExpr                         (55)
	BExpr1 -> BExpr '==' BExpr                         (56)
	BExpr1 -> BExpr '!=' BExpr                         (57)
	BExpr1 -> '!' BExpr1                               (58)
	BExpr1 -> BExpr 'or' BExpr1                        (59)
	BExpr1 -> BExpr 'and' BExpr1                       (60)
	BExpr1 -> BExpr 'xor' BExpr1                       (61)
	BExpr1 -> ArrIdent '[' IExpr ']'                   (62)
	BExpr1 -> DictIdent '[' IExpr ']'                  (63)
	BExpr1 -> DictIdent '[' BExpr ']'                  (64)
	BExpr1 -> DictIdent 'has' 'key' '[' IExpr ']'      (65)
	BExpr1 -> DictIdent 'has' 'key' '[' BExpr ']'      (66)
	BExpr1 -> FuncIdent '(' Args ')'                   (67)
	BExpr1 -> '(' BExpr ')'                            (68)
	BExpr -> BExpr1                                    (69)
	Args -> 'none'                                     (70)
	Args -> Expr                                       (71)
	Args -> Expr ',' Args                              (72)
	Lambda -> FType 'lambda' '(' Params ')' '->' '{' Instr '}'   (73)
	Params -> 'none'                                   (74)
	Params -> VarIdent ':' Type                        (75)
	Params -> FuncIdent ':' FType                      (76)
	Params -> Lambda                                   (77)
	Params -> VarIdent ':' Type ',' Params             (78)
	Params -> FuncIdent ':' FType ',' Params           (79)
	Params -> Lambda ',' Params                        (80)
	Instr1 -> 'skip'                                   (81)
	Instr1 -> 'if' '(' BExpr ')' '{' Instr '}' 'else' '{' Instr '}'   (82)
	Instr1 -> 'if' '(' BExpr ')' '{' Instr '}'         (83)
	Instr1 -> 'while' '(' BExpr ')' '{' Instr '}'      (84)
	Instr1 -> 'for' '(' VarIdent '=' IExpr 'to' IExpr ')' '{' Instr '}'   (85)
	Instr1 -> 'return' '(' IExpr ')'                   (86)
	Instr1 -> 'print' '(' IExpr ')'                    (87)
	Instr1 -> 'swap' '(' VarIdent ',' VarIdent ')'     (88)
	Instr1 -> 'break' '(' IExpr ')'                    (89)
	Instr1 -> 'break'                                  (90)
	Instr1 -> 'continue' 'outer' '(' IExpr ')'         (91)
	Instr1 -> 'continue'                               (92)
	Instr1 -> Type VarIdent '=' Expr                   (93)
	Instr1 -> 'Array' Type ArrIdent '[' IExpr ']' '(' Expr ')'   (94)
	Instr1 -> 'Array' Type ArrIdent '[' IExpr ']'      (95)
	Instr1 -> ArrIdent '[' IExpr ']' '=' '(' IExpr ')'   (96)
	Instr1 -> 'Dict' Type DictIdent                    (97)
	Instr1 -> DictIdent '[' IExpr ']' 'set' '(' IExpr ')'   (98)
	Instr1 -> FType FuncIdent '(' Params ')' '{' Instr '}'   (99)
	Instr1 -> VarIdent '=' IExpr                       (100)
	Instr1 -> VarIdent '+=' IExpr                      (101)
	Instr1 -> VarIdent '-=' IExpr                      (102)
	Instr1 -> VarIdent '*=' IExpr                      (103)
	Instr1 -> VarIdent '/=' IExpr                      (104)
	Instr1 -> VarIdent '%=' IExpr                      (105)
	Instr1 -> 'debug' 'assignment' 'enable' VarIdent   (106)
	Instr1 -> 'debug' 'assignment' 'disable' VarIdent   (107)
	Instr1 -> 'debug' 'reading' 'enable' VarIdent      (108)
	Instr1 -> 'debug' 'reading' 'disable' VarIdent     (109)
	Instr -> Instr1 ';' Instr                          (110)
	Instr -> Instr1                                    (111)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'*='           { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	'/='           { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<='           { PT _ (TS _ 22) }
	'='            { PT _ (TS _ 23) }
	'=='           { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'Array'        { PT _ (TS _ 27) }
	'Bool'         { PT _ (TS _ 28) }
	'BoolFunc'     { PT _ (TS _ 29) }
	'Dict'         { PT _ (TS _ 30) }
	'Int'          { PT _ (TS _ 31) }
	'IntFunc'      { PT _ (TS _ 32) }
	'['            { PT _ (TS _ 33) }
	']'            { PT _ (TS _ 34) }
	'and'          { PT _ (TS _ 35) }
	'assignment'   { PT _ (TS _ 36) }
	'break'        { PT _ (TS _ 37) }
	'continue'     { PT _ (TS _ 38) }
	'debug'        { PT _ (TS _ 39) }
	'disable'      { PT _ (TS _ 40) }
	'else'         { PT _ (TS _ 41) }
	'enable'       { PT _ (TS _ 42) }
	'false'        { PT _ (TS _ 43) }
	'for'          { PT _ (TS _ 44) }
	'has'          { PT _ (TS _ 45) }
	'if'           { PT _ (TS _ 46) }
	'key'          { PT _ (TS _ 47) }
	'lambda'       { PT _ (TS _ 48) }
	'none'         { PT _ (TS _ 49) }
	'or'           { PT _ (TS _ 50) }
	'outer'        { PT _ (TS _ 51) }
	'print'        { PT _ (TS _ 52) }
	'reading'      { PT _ (TS _ 53) }
	'return'       { PT _ (TS _ 54) }
	'set'          { PT _ (TS _ 55) }
	'skip'         { PT _ (TS _ 56) }
	'swap'         { PT _ (TS _ 57) }
	'to'           { PT _ (TS _ 58) }
	'true'         { PT _ (TS _ 59) }
	'while'        { PT _ (TS _ 60) }
	'xor'          { PT _ (TS _ 61) }
	'{'            { PT _ (TS _ 62) }
	'}'            { PT _ (TS _ 63) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pType    rule  0
	%start_pFType   rule  1
	%start_pVarIdent rule  2
	%start_pArrIdent rule  3
	%start_pDictIdent rule  4
	%start_pFuncIdent rule  5
	%start_pExpr    rule  6
	%start_pIExpr   rule  7
	%start_pIExpr1  rule  8
	%start_pIExpr2  rule  9
	%start_pBExpr1  rule  10
	%start_pBExpr   rule  11
	%start_pArgs    rule  12
	%start_pLambda  rule  13
	%start_pParams  rule  14
	%start_pInstr1  rule  15
	%start_pInstr   rule  16
	Ident           rule  17
	Integer         rule  18
	Type            rules 19, 20
	FType           rules 21, 22
	VarIdent        rule  23
	ArrIdent        rule  24
	DictIdent       rule  25
	FuncIdent       rule  26
	Expr            rules 27, 28
	IExpr           rules 29, 30, 31
	IExpr1          rules 32, 33, 34, 35
	IExpr2          rules 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46
	BExpr1          rules 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68
	BExpr           rule  69
	Args            rules 70, 71, 72
	Lambda          rule  73
	Params          rules 74, 75, 76, 77, 78, 79, 80
	Instr1          rules 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109
	Instr           rules 110, 111

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pType -> . Type                              (rule 0)

	'Bool'         shift, and enter state 28
	'Int'          shift, and enter state 31

	Type           goto state 95

State 1

	%start_pFType -> . FType                            (rule 1)

	'BoolFunc'     shift, and enter state 29
	'IntFunc'      shift, and enter state 32

	FType          goto state 94

State 2

	%start_pVarIdent -> . VarIdent                      (rule 2)

	L_Ident        shift, and enter state 18

	Ident          goto state 92
	VarIdent       goto state 93

State 3

	%start_pArrIdent -> . ArrIdent                      (rule 3)

	L_Ident        shift, and enter state 18

	Ident          goto state 90
	ArrIdent       goto state 91

State 4

	%start_pDictIdent -> . DictIdent                    (rule 4)

	L_Ident        shift, and enter state 18

	Ident          goto state 88
	DictIdent      goto state 89

State 5

	%start_pFuncIdent -> . FuncIdent                    (rule 5)

	L_Ident        shift, and enter state 18

	Ident          goto state 86
	FuncIdent      goto state 87

State 6

	%start_pExpr -> . Expr                              (rule 6)

	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 72

	Ident          goto state 52
	Integer        goto state 53
	VarIdent       goto state 54
	ArrIdent       goto state 55
	DictIdent      goto state 56
	FuncIdent      goto state 57
	Expr           goto state 85
	IExpr          goto state 59
	IExpr1         goto state 60
	IExpr2         goto state 61
	BExpr1         goto state 62
	BExpr          goto state 63

State 7

	%start_pIExpr -> . IExpr                            (rule 7)

	'('            shift, and enter state 82
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 72

	Ident          goto state 52
	Integer        goto state 53
	VarIdent       goto state 77
	ArrIdent       goto state 78
	DictIdent      goto state 79
	FuncIdent      goto state 80
	IExpr          goto state 84
	IExpr1         goto state 60
	IExpr2         goto state 61

State 8

	%start_pIExpr1 -> . IExpr1                          (rule 8)

	'('            shift, and enter state 82
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 72

	Ident          goto state 52
	Integer        goto state 53
	VarIdent       goto state 77
	ArrIdent       goto state 78
	DictIdent      goto state 79
	FuncIdent      goto state 80
	IExpr1         goto state 83
	IExpr2         goto state 61

State 9

	%start_pIExpr2 -> . IExpr2                          (rule 9)

	'('            shift, and enter state 82
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 72

	Ident          goto state 52
	Integer        goto state 53
	VarIdent       goto state 77
	ArrIdent       goto state 78
	DictIdent      goto state 79
	FuncIdent      goto state 80
	IExpr2         goto state 81

State 10

	%start_pBExpr1 -> . BExpr1                          (rule 10)

	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 72

	Ident          goto state 52
	Integer        goto state 53
	VarIdent       goto state 54
	ArrIdent       goto state 55
	DictIdent      goto state 56
	FuncIdent      goto state 57
	IExpr          goto state 73
	IExpr1         goto state 60
	IExpr2         goto state 61
	BExpr1         goto state 75
	BExpr          goto state 76

State 11

	%start_pBExpr -> . BExpr                            (rule 11)

	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 72

	Ident          goto state 52
	Integer        goto state 53
	VarIdent       goto state 54
	ArrIdent       goto state 55
	DictIdent      goto state 56
	FuncIdent      goto state 57
	IExpr          goto state 73
	IExpr1         goto state 60
	IExpr2         goto state 61
	BExpr1         goto state 62
	BExpr          goto state 74

State 12

	%start_pArgs -> . Args                              (rule 12)

	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'none'         shift, and enter state 70
	'true'         shift, and enter state 71
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 72

	Ident          goto state 52
	Integer        goto state 53
	VarIdent       goto state 54
	ArrIdent       goto state 55
	DictIdent      goto state 56
	FuncIdent      goto state 57
	Expr           goto state 58
	IExpr          goto state 59
	IExpr1         goto state 60
	IExpr2         goto state 61
	BExpr1         goto state 62
	BExpr          goto state 63
	Args           goto state 64

State 13

	%start_pLambda -> . Lambda                          (rule 13)

	'BoolFunc'     shift, and enter state 29
	'IntFunc'      shift, and enter state 32

	FType          goto state 45
	Lambda         goto state 51

State 14

	%start_pParams -> . Params                          (rule 14)

	'BoolFunc'     shift, and enter state 29
	'IntFunc'      shift, and enter state 32
	'none'         shift, and enter state 50
	L_Ident        shift, and enter state 18

	Ident          goto state 44
	FType          goto state 45
	VarIdent       goto state 46
	FuncIdent      goto state 47
	Lambda         goto state 48
	Params         goto state 49

State 15

	%start_pInstr1 -> . Instr1                          (rule 15)

	'Array'        shift, and enter state 27
	'Bool'         shift, and enter state 28
	'BoolFunc'     shift, and enter state 29
	'Dict'         shift, and enter state 30
	'Int'          shift, and enter state 31
	'IntFunc'      shift, and enter state 32
	'break'        shift, and enter state 33
	'continue'     shift, and enter state 34
	'debug'        shift, and enter state 35
	'for'          shift, and enter state 36
	'if'           shift, and enter state 37
	'print'        shift, and enter state 38
	'return'       shift, and enter state 39
	'skip'         shift, and enter state 40
	'swap'         shift, and enter state 41
	'while'        shift, and enter state 42
	L_Ident        shift, and enter state 18

	Ident          goto state 19
	Type           goto state 20
	FType          goto state 21
	VarIdent       goto state 22
	ArrIdent       goto state 23
	DictIdent      goto state 24
	Instr1         goto state 43

State 16

	%start_pInstr -> . Instr                            (rule 16)

	'Array'        shift, and enter state 27
	'Bool'         shift, and enter state 28
	'BoolFunc'     shift, and enter state 29
	'Dict'         shift, and enter state 30
	'Int'          shift, and enter state 31
	'IntFunc'      shift, and enter state 32
	'break'        shift, and enter state 33
	'continue'     shift, and enter state 34
	'debug'        shift, and enter state 35
	'for'          shift, and enter state 36
	'if'           shift, and enter state 37
	'print'        shift, and enter state 38
	'return'       shift, and enter state 39
	'skip'         shift, and enter state 40
	'swap'         shift, and enter state 41
	'while'        shift, and enter state 42
	L_Ident        shift, and enter state 18

	Ident          goto state 19
	Type           goto state 20
	FType          goto state 21
	VarIdent       goto state 22
	ArrIdent       goto state 23
	DictIdent      goto state 24
	Instr1         goto state 25
	Instr          goto state 26

State 17

	Ident -> . L_Ident                                  (rule 17)

	L_Ident        shift, and enter state 18


State 18

	Ident -> L_Ident .                                  (rule 17)
